ACPD update 23Apr2018

--- a/ALL_CASH_PROPERTY_DEALS/How_It_Works.html
+++ b/ALL_CASH_PROPERTY_DEALS/How_It_Works.html
@@ -69,47 +69,55 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
           <div style="height: 1px; line-height: 1px; " class="tinyText"> </div>
           <div style="margin-left: 190px; margin-top: 319px; position: relative; width: 320px; z-index: 1; " class="style_SkipStroke_1 shape-with-text flowDefining">
-            <div class="text-content style_External_320_855" style="padding: 0px; ">
+            <div class="text-content style_External_320_1978" style="padding: 0px; ">
               <div class="style">
                 <ol>
                   <li style="line-height: 28px; padding-left: 17px; text-indent: -17px; " class="full-width" value="1">
-                    <p style="padding-top: 0pt; text-indent: -17px; " class="paragraph_style"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">1.</span><span style="width: 8px; " class="inline-block"></span>You want or need to sell your home.  It’s causing you stress and you are not sure what your options are or how to sell it quickly and easily.<br /></p>
+                    <p style="padding-top: 0pt; text-indent: -17px; " class="paragraph_style"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">1.</span><span style="width: 8px; " class="inline-block"></span>You have a desire or need to sell your property for whatever reason.  It might be causing you stress or be preventing you from doing something that you want to do.  You might not have the money for needed repairs or might not want to pay expensive realtor fees.  You are not sure what your options are or how to sell your property quickly and easily.<br /></p>
                   </li>
                 </ol>
                 <p class="paragraph_style_1"><br /></p>
                 <ol>
                   <li style="line-height: 28px; padding-left: 17px; text-indent: -17px; " class="full-width" value="2">
-                    <p style="text-indent: -17px; " class="paragraph_style_2"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">2.</span><span style="width: 3px; " class="inline-block"></span> Call us for a quick, no hassle phone consultation.<br /></p>
+                    <p style="text-indent: -17px; " class="paragraph_style_2"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">2.</span><span style="width: 3px; " class="inline-block"></span> Call us for a quick and easy, no hassle, phone consultation.<br /></p>
                   </li>
                 </ol>
                 <p class="paragraph_style_3"><br /></p>
                 <ol>
                   <li style="line-height: 28px; padding-left: 17px; text-indent: -17px; " class="full-width" value="3">
-                    <p style="text-indent: -17px; " class="paragraph_style_4"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">3.</span><span style="width: 2px; " class="inline-block"></span> Tell us about your home.<br /></p>
+                    <p style="text-indent: -17px; " class="paragraph_style_4"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">3.</span><span style="width: 2px; " class="inline-block"></span> Tell us the details about your property so that we can properly evaluate it.<br /></p>
                   </li>
                 </ol>
                 <p class="paragraph_style_5"><br /></p>
                 <ol>
                   <li style="line-height: 28px; padding-left: 17px; text-indent: -17px; " class="full-width" value="4">
-                    <p style="text-indent: -17px; " class="paragraph_style_6"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">4.</span><span style="width: 2px; " class="inline-block"></span> We go out and look at the property.  Beware of buyers that will make an offer without actually seeing the property. They are probably not serious buyers and might be wasting your time.<br /></p>
+                    <p style="text-indent: -17px; " class="paragraph_style_6"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">4.</span><span style="width: 2px; " class="inline-block"></span> We will come out and look at the property.  Note:  Often times, buyers will make an offer without actually seeing the property.  We believe that a FAIR offer on the property can not be made without an actual visit.<br /></p>
                   </li>
                 </ol>
                 <p class="paragraph_style_7"><br /></p>
                 <ol>
                   <li style="line-height: 28px; padding-left: 17px; text-indent: -17px; " class="full-width" value="5">
-                    <p style="text-indent: -17px; " class="paragraph_style_8"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">5.</span><span style="width: 2px; " class="inline-block"></span> We present you a fair cash offer on the spot.<br /></p>
+                    <p style="text-indent: -17px; " class="paragraph_style_6"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">5.</span><span style="width: 2px; " class="inline-block"></span>  While we are looking at the property, you have the opportunity to point out any upgrades or unique points which could influence the price you are offered for your property. Note: Think about it like this, would YOU make an offer to buy a property that you have never seen?  We didn’t thinks so.  This important step demonstrates that we are serious about making you a FAIR offer for your property.<br /></p>
                   </li>
                 </ol>
-                <p class="paragraph_style_9"><br /></p>
-                <p class="paragraph_style_9">6. When you are satisfied with our offer, accept it and lets do the paperwork.<br /></p>
-                <p class="paragraph_style_9"><br /></p>
+                <p class="paragraph_style_7"><br /></p>
+                <p class="paragraph_style_8">6. We will present you a fair cash offer on the spot.  Occasionally, there are additional things that need to be looked at before an accurate and fair offer can be made.  In those cases, we normally will have the offer to you the same day.<br /></p>
+                <p class="paragraph_style_8"><br /></p>
+                <p class="paragraph_style_8">7. If you are ready to accept our offer, we help you complete our 1 page paperwork and you are on your way to reducing your stress or accomplishing your goal of selling your property.<br /></p>
+                <p class="paragraph_style_8"><br /></p>
                 <ol>
-                  <li style="line-height: 28px; padding-left: 27px; text-indent: -27px; " class="full-width" value="7">
-                    <p style="text-indent: -27px; " class="paragraph_style_10"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">7.</span><span style="width: 12px; " class="inline-block"></span> We will set up the closing date and submit all of the paperwork.<br /></p>
+                  <li style="line-height: 28px; padding-left: 25px; text-indent: -25px; " class="full-width" value="8">
+                    <p style="text-indent: -25px; " class="paragraph_style_9"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">8.</span><span style="width: 12px; " class="inline-block"></span>We set up the closing date and submit all of the paperwork.  We also keep you informed of where we are in the process.  It normally takes about 21 working days but often is completed earlier than that.<br /></p>
+                  </li>
+                </ol>
+                <p class="paragraph_style_10"><br /></p>
+                <ol>
+                  <li style="line-height: 28px; padding-left: 25px; text-indent: -25px; " class="full-width" value="9">
+                    <p style="text-indent: -25px; " class="paragraph_style_9"><span style="font-size: 23px; position: relative; top: 0px; " class="Bullet">9.</span><span style="width: 11px; " class="inline-block"></span>You can now start making your plans (moving out, what to take with you, what to leave, etc).<br /></p>
                   </li>
                 </ol>
                 <p class="paragraph_style_11"><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_11">8.  You come to the closing and collect your money and your stress is gone!</p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_11">10.  You come to the closing and collect your money and your stress is gone!</p>
               </div>
             </div>
           </div>
@@ -125,7 +133,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id2" style="height: 33px; left: 190px; position: absolute; top: 288px; width: 320px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
             <div class="text-content graphic_shape_layout_style_default_External_320_33" style="padding: 0px; ">
               <div class="graphic_shape_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_12">How It Works...</p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_12">How It All Works...</p>
               </div>
             </div>
           </div>
